header part added

--- a/index.html
+++ b/index.html
@@ -4,8 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Camera Shop</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <div>
+                <h2 class="nav-title">Influencer products</h2>
+            </div>
+            <div class="nav-menubar">
+                <a href="">Home</a>
+                <a href="">Products</a>
+                <a href="">Sign up</a>
+                <a href="">Log In</a>
+                <a href=""><img class="nav-icon-one" src="./images/images.png" alt=""></a>
+                <a href=""><img class="nav-icon-two" src="./images/shopping-cart-outline-badged.svg" alt=""></a>
+            </div>
+        </nav>
+       <div class="header-container">
+        <div class="header-text-container">
+            <h2 class="header-title">Start your Journey as <br> Influencer</h2>
+            <p class="header-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
+            <button class="header-button">Prebook now</button>
+        </div>
+        <div>
+            <img class="header-img" src="./images/main-camera.png" alt="">
+        </div>
+       </div>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
+
 </body>
 </html>
